# on-call

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  test.py
data/: rota_snapshots.csv
src/: db.py  interval.py  main.py  rotas.py
src/db/: db.py
src/rota/: interval.py  rotas.py
src/util/: date_util.py  list_util.py
test/: conftest.py  helpers.py  test_db.py
test/rotas/: test_add_user_to_rota.py  test_get_rota_between.py  test_remove_user_from_rota.py  test_rotas.py  test_rotas_expected.py
test/test_data/: overrides.csv  rota_snapshots.csv  rotas.csv
test/test_db_data/: change_dates.csv  rota_snapshots.csv  users.csv
test/util/: test_date_util.py  test_list_util.py
