[project]
name = "on-call"
version = "0.1.0"
description = "Simple on-call rota management system built with FastAPI and DuckDB."
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi[standard]>=0.134.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.mypy]
disallow_untyped_defs = true
